--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "laravel/framework": "4.1.*",
-        "dflydev/markdown": "1.0.*"
+        "dflydev/markdown": "1.0.*",
+        "roumen/sitemap": "dev-master"
     },
     "autoload": {
         "classmap": [
