--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "name": "Alambic",
+    "description": "The Alambic flat cms.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
