--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ notifications:
   email:
     recipients:
       - kezho@me.com
-    on_success: [always|never|change] # default: change
-    on_failure: [always|never|change] # default: always
+    on_success: change
+    on_failure: always
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
